Version 0.x.y (2008-mm-dd):

	* Added jobdir argument to pre_enqueue_hook() (make sure to update
	  include/hooks.inc if you use it).

Version 0.6.3 (2008-02-18):

	* Fixed HTML title in generated HTML code. Each page should get an
	  unique title.
	  
	* Fixed sorting of date in statistics navigator. The links now has
	  chronological order.
	  
	* The name for the page title can now be configured in conf/config.inc
	
	* Fixed about notes for batchelor. Added credits, download and
	  copyright sections.

Version 0.6.2 (2008-02-17):

	* Hook functions added. This allows the behaviour and functionality
	  of batchelor to be extended by user defined callback functions.
	  See callback skeletons in include/hooks.inc.
	  
	* Its now possible to delete directories with jobid 0 as long as the
	  jobid file is missing (indicates a server failure or missconfiguration).
	  
Version 0.6.1 (2008-03-14):

	* Deleting a job directory is now working recursive (bugfix).
	
	* Preserve original filename of uploaded file is now possible. The
	  filename is not preserved by default (see conf/config.inc).
	
	* Fixed bug where subdirs under cache/../result/ got added to the
	  zipfile as regular files when using the PECL zip extension.
	
Version 0.6.0 (2008-03-14):

	* Added statistics module. Run utils/collect.php to generate the
	  statistics data. Access control is configured in conf/config.inc.

Version 0.5.1 (2008-03-07):

	* Maintenance release to fix version issues.
	
Version 0.5.0 (2008-03-06):

	* Its now possible to configure menu orientation (horizontal or
	  vertical) and menu style (graphic, text or compact) from inside
	  conf/config.inc.
	  
	* Added program options to simula.c (test program).
	
	* Ported batchelor to BSD/Mac OS X (tested with 10.4.11). The running 
	  state is not available on OSX using its builtin at command due to 
	  missing information in its output.
	  
Version 0.4.2 (2008-02-21):
	
	* Added qsignal() function to utils/script.sh.in to help users